DEV: register/login endpoints
