# Backend/Api/RootEndpoints.cs
@@ -7,7 +7,7 @@ public static class RootEndpoints
     public static RouteGroupBuilder MapRootApi(this RouteGroupBuilder group)
     {
         group.MapGet("/", () => "Hello, World!");
-        group.MapGet("/requires-auth", (ClaimsPrincipal user) => $"Hello, {user.Identity?.Name}!").RequireAuthorization();
+        group.MapGet("/protected-me", (ClaimsPrincipal user) => $"Hello, {user.Identity?.Name}!").RequireAuthorization();
         return group;
     }
 }
